--- a/project_9/css/style.css
+++ b/project_9/css/style.css
@@ -26,3 +26,78 @@
 .navbar-toggler{
     background-color: black!important;
 }
+
+/* Add_to_product_modal */
+.ProductForm .form-group{
+    margin-bottom: 20px;
+}
+.ProductForm button{
+    width: 100%;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition-duration: 0.5s;
+}
+.ProductForm button:hover{
+    background-color: transparent;
+    border: 1px solid black!important;
+    color: black!important;
+}
+
+.product-cards{
+    width: 280px;
+    margin: 150px 0px 30px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+.product-cards:hover{
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+}
+.product-card__image{
+    height: 250px;
+    overflow: hidden;
+}
+.product-card__image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.product-card__info{
+    padding: 20px;
+}
+.product-card__title{
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.product-card__description{
+    font-size: 15px;
+    color: #666;
+    padding: 10px 0;
+}
+.product-card__price-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.product-card__price{
+    font-size: 20px;
+    font-weight: 600;
+}
+.Product-card__btn{
+    background-color: black!important;
+    color: white!important;
+    border-radius: 4px;
+    transition-duration: 0.5s;
+    padding: 8px 16px;
+    border: none;
+}
+.Product-card__btn:hover{
+    background-color: transparent!important;
+    border: 1px solid black!important;
+    color: black!important;
+}
