--- a/project_9/css/style.css
+++ b/project_9/css/style.css
@@ -49,7 +49,7 @@
 
 .product-cards{
     width: 280px;
-    margin: 150px 0px 30px;
+    margin: 250px 50px 30px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
@@ -97,6 +97,21 @@
     border: none;
 }
 .Product-card__btn:hover{
+    background-color: transparent!important;
+    border: 1px solid black!important;
+    color: black!important;
+}
+.cont{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#back_cart_btn{
+    background-color: black;
+    color: white;
+    transition-duration: 0.5s;
+}
+#back_cart_btn:hover{
     background-color: transparent!important;
     border: 1px solid black!important;
     color: black!important;
